--- a/line_follower/CMakeLists.txt
+++ b/line_follower/CMakeLists.txt
@@ -5,6 +5,11 @@ set(CMAKE_CXX_FLAGS "-fpermissive -std=c++0x")
 
 find_package(catkin REQUIRED COMPONENTS
   rospy
+  dynamic_reconfigure
+)
+
+generate_dynamic_reconfigure_options (
+  cfg/LineParam.cfg
 )
 
 catkin_package(DEPENDS)
@@ -12,4 +17,3 @@ catkin_package(DEPENDS)
 include_directories(
   ${catkin_INCLUDE_DIRS}
 )
-
