--- a/line_follower/package.xml
+++ b/line_follower/package.xml
@@ -8,9 +8,15 @@
   <!-- track credits to YikeStone -->
   <license>TODO</license>
   <buildtool_depend>catkin</buildtool_depend>
+
   <build_depend>rospy</build_depend>
+  <build_depend>dynamic_reconfigure</build_depend>
+
   <build_export_depend>rospy</build_export_depend>
+  <build_export_depend>dynamic_reconfigure</build_export_depend>
+
   <exec_depend>rospy</exec_depend>
+  <exec_depend>dynamic_reconfigure</exec_depend>
 
   <export>
   </export>
