--- a/drone_orbit/package.xml
+++ b/drone_orbit/package.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>iarc_arena</name>
+  <name>drone_orbit</name>
   <version>0.0.0</version>
-  <description>The iarc drone package</description>
+  <description>The drone_orbit package</description>
   <maintainer email="arnabgudu.gs@gmail.com">Arnab Paikaray</maintainer>
   <license>TODO</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
   <export>
-    <!-- Other tools can request additional information be placed here -->
-    <gazebo plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
   </export>
 </package>
