--- a/digitizer/CMakeLists.txt
+++ b/digitizer/CMakeLists.txt
@@ -17,3 +17,7 @@ foreach(dir launch urdf models)
 	install(DIRECTORY ${dir}/
 		DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/${dir})
 endforeach(dir)
+
+catkin_install_python(PROGRAMS submissions/Suyash/PathFinder.py submissions/Suyash/PathFinderNode.py submissions/Suyash/Movement.py
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
